--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,33 +1,49 @@
 .App {
-  text-align: center;
+ display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ justify-content: center;
+ background-color: rgb(198, 198, 218);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.friend-form{
+  width: 300px;
+
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input{
+  margin: 2px;
+}
+.box1{
+  display: flex;
+  flex-wrap: row wrap;
+  
+}
+.friend{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border: 1px solid black;
+  /* width: 250px; */
+  margin: 10px;
+}
+.friendContainer{
+  width:500;
+  height:auto;
+  display:flex;
+  justify-content: center;
+  
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  display: flex;
+  font-size: 15px;
+  padding: 5px;
 }
