--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,49 +1,94 @@
-.App {
- display: flex;
- flex-direction: row;
- flex-wrap: wrap;
- justify-content: center;
- background-color: rgb(198, 198, 218);
+
+ .App {
+  /* width: 80%;
+  height:50%; */
+  font-family: cursive;
+  display: flex;
+  flex-direction: row;
+  border: 1px solid white;
+  /* justify-content: center; 
+ align-items: center;  */
+  background-color:whitesmoke;
+  border-radius: 2% 5%;
+  -webkit-box-shadow: 10px 20px 80px 15px blue;
+  margin: 15px auto;
+} 
+
+
+ 
+
+.friend{
+  
+ 
+  
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 5px 5px 2.5px darkblue;
+  background-color: lightblue;  
+  color: black;
+  margin: 1rem;
+  border-radius: 5% 15%;
+  border: 1px solid white;
 }
 
-.friend-form{
-  width: 300px;
 
+ .friend-form{
+ 
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 2px;
-}
+  margin: 150px;
+  border: 1px solid white;
+} 
 
 input{
-  margin: 2px;
-}
-.box1{
+  width:200px;
+  font-weight: bold;
+  border-color: pink;
+  background-color: dodgerblue;
+  margin: 5px auto;
+  box-shadow: 1px 1px 1.25px silver;
   display: flex;
-  flex-wrap: row wrap;
-  
-}
-.friend{
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
-  /* width: 250px; */
-  margin: 10px;
+  color: black;
+ 
+  border-radius:5%;
 }
-.friendContainer{
-  width:500;
-  height:auto;
-  display:flex;
+
+.box1{
+ 
+  border: 1px solid purple;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   
+  
+  
 
+  
+}
+
+button {
+  display: flex;
+  flex-direction: column;
+  margin:5px;
+  background-color: dodgerblue;
 }
 
 p {
   display: flex;
-  font-size: 15px;
+  font-size: 1rem;
+  padding: 5px;
+} 
+
+a {
+   display: flex;
+  font-size: 1rem;
   padding: 5px;
 }
